Add an explanation to the front page

--- a/views/index.slim
+++ b/views/index.slim
@@ -1,2 +1,6 @@
+p
+  | This will tag your articles with how long it should take to read
+  |  them, such as "2min", "5min", "10min", etc.
+
 a href="/oauth/connect" class="connect"
   | Connect to your Pocket account
