--- a/public/app.css
+++ b/public/app.css
@@ -4,6 +4,10 @@ body {
   color: #555;
 }
 
+@media only screen and (max-device-width: 480px) {
+  body { font-size: 2.5em }
+}
+
 body, input {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
