--- a/views/layout.slim
+++ b/views/layout.slim
@@ -4,6 +4,8 @@ head
   title
     | pocket tagger
   link rel='stylesheet' type='text/css' href='/app.css'
+  link rel='shortcut icon' href='favicon.ico'
+  link rel='apple-touch-icon' href='logo.png'
 body
   header
     h1
